<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@color/colorPrimary">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="20dp"
		android:orientation="vertical">
		<ImageView
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:layout_gravity="center"
			android:src="@drawable/logo"/>
		<android.support.design.widget.TextInputLayout
			android:id="@+id/emailLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/hintText"
			android:textColorHint="@color/white"
			app:errorEnabled="true">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:background="@drawable/rect1"
			android:drawableEnd="@drawable/ic_user_24dp"
			android:drawablePadding="16dp"
			android:textColor="@color/white"
			android:hint="@string/login_email_label"
			android:padding="13dp"
			android:paddingTop="@dimen/floating_hint_margin"/>

		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/next"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:background="@drawable/rect"
			android:text="@string/registration_next"
			android:textColor="#ffffff" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginBottom="30dp"
			android:gravity="bottom|center"
			android:visibility="visible">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/registration_sign_in"
				android:textColor="@android:color/white" />

			<TextView
				android:id="@+id/signIn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				android:text="@string/registration_sign_in_link"
				android:textColor="@android:color/white"
				android:textStyle="bold" />
		</LinearLayout>
	</LinearLayout>
</FrameLayout>