<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.teamManagement.SendNotification">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/back_action_bar"
            layout="@layout/toolbar" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/recipient"
                    android:layout_width="match_parent"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_notification_to" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/notification_message"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="start"
                android:hint="@string/send_notification_message"
                android:ems="10"
                android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_send_radioButton_notification" />

            <CheckBox
                android:id="@+id/sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_send_radioButton_sms" />

            <TextView
                android:id="@+id/errorCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_send_error_one_check"
                android:visibility="gone"
                android:textColor="@color/red"/>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="invisible" />
</FrameLayout>