<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".fragment.registrationFragment.Registration_2nd_step">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<android.support.v7.widget.CardView
			android:id="@+id/cardview"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:elevation="100dp"
			app:cardBackgroundColor="@android:color/white"
			app:cardCornerRadius="8dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:gravity="center_vertical"
					android:paddingLeft="25dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/registration_card_header_user_info"
						android:textColor="@color/colorPrimaryLight"/>
				</LinearLayout>

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@android:color/darker_gray" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="25dp"
					android:layout_gravity="center">

					<ImageView
						android:layout_width="28dp"
						android:layout_height="28dp"
						android:src="@drawable/ic_person_black_24dp"
						android:layout_gravity="center"/>

					<android.support.design.widget.TextInputLayout
						android:layout_marginBottom="-10dp"
						android:id="@+id/name_layout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:errorEnabled="true">

						<android.support.design.widget.TextInputEditText
							android:id="@+id/name"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/registration_name" />

					</android.support.design.widget.TextInputLayout>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="25dp"
					android:layout_gravity="center">

					<ImageView
						android:layout_width="28dp"
						android:layout_height="28dp"
						android:src="@drawable/ic_home_black_24dp"
						android:layout_gravity="center"/>

					<android.support.design.widget.TextInputLayout
						android:id="@+id/address_layout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:errorEnabled="true"
						android:layout_marginBottom="-10dp">

						<android.support.design.widget.TextInputEditText
							android:id="@+id/address"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/registration_address" />

					</android.support.design.widget.TextInputLayout>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="25dp"
					android:layout_gravity="center">

					<ImageView
						android:layout_width="28dp"
						android:layout_height="28dp"
						android:src="@drawable/ic_phone_black_24dp"
						android:layout_gravity="center"/>

					<android.support.design.widget.TextInputLayout
						android:id="@+id/phone_number_layout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:errorEnabled="true"
						android:layout_marginBottom="-10dp">

						<android.support.design.widget.TextInputEditText
							android:id="@+id/phone_number"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/registration_phone_number" />

					</android.support.design.widget.TextInputLayout>
				</LinearLayout>
			</LinearLayout>
		</android.support.v7.widget.CardView>

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/registration_password_label"
			android:paddingLeft="10dip"
			android:paddingRight="10dip"
			android:paddingTop="10dip"
			android:textSize="17sp"
			android:labelFor="@+id/password"/>

		<EditText android:id="@+id/password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dip"
			android:layout_marginBottom="15dip"
			android:singleLine="true"
			android:inputType="textPassword"/>

		<Button android:id="@+id/createUser"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/registration_next"/>
	</LinearLayout>


</FrameLayout>