<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.teamManagement.TeamActivity"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<include android:id="@+id/back_action_bar" layout="@layout/toolbar"/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:labelFor="@+id/fee_name"
			android:paddingLeft="10dip"
			android:paddingRight="10dip"
			android:paddingTop="10dip"
			android:text="@string/add_fee_fee_name"
			android:textSize="17sp" />

		<EditText
			android:id="@+id/fee_name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dip"
			android:layout_marginBottom="15dip"
			android:inputType="text"
			android:singleLine="true" />
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:labelFor="@+id/fee_cost"
			android:paddingLeft="10dip"
			android:paddingRight="10dip"
			android:paddingTop="10dip"
			android:text="@string/add_fee_fee_cost"
			android:textSize="17sp" />
		<EditText
			android:id="@+id/fee_cost"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dip"
			android:layout_marginBottom="15dip"
			android:inputType="number"
			android:singleLine="true" />
		<Button
			android:id="@+id/add_fee"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/add_fee_add" />
	</LinearLayout>
	<ProgressBar
		android:id="@+id/pb_loading_indicator"
		android:layout_width="42dp"
		android:layout_height="42dp"
		android:layout_gravity="center_vertical|center_horizontal"
		android:visibility="invisible" />

</FrameLayout>