<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@color/colorPrimary"
	tools:context=".fragment.registrationFragment.Registration_2nd_step">
	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
	<include android:id="@+id/back_action_bar" layout="@layout/toolbar"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="20dp"
		android:orientation="vertical">


		<android.support.design.widget.TextInputLayout
			android:id="@+id/name_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/hintText"
			android:textColorHint="@color/white"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:background="@drawable/rect1"
				android:drawableEnd="@drawable/ic_user_24dp"
				android:drawablePadding="16dp"
				android:textColor="@color/white"
				android:hint="@string/registration_name"
				android:padding="13dp"
				android:paddingTop="@dimen/floating_hint_margin"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_marginTop="-17dp"
			android:id="@+id/address_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/hintText"
			android:textColorHint="@color/white"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/address"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:background="@drawable/rect1"
				android:drawableEnd="@drawable/ic_home_white_24dp"
				android:drawablePadding="16dp"
				android:hint="@string/registration_address"
				android:inputType="text"
				android:padding="13dp" />
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_marginTop="-7dp"
			android:id="@+id/phone_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/hintText"
			android:textColorHint="@color/white">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal">
				<com.hbb20.CountryCodePicker
					android:id="@+id/cpp"
					android:layout_width="wrap_content"
					app:ccp_contentColor="@color/white"
					app:ccp_autoDetectCountry="true"
					app:ccp_hintExampleNumber="true"
					android:layout_height="wrap_content" />
				<EditText
					android:id="@+id/phone"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/white"
					android:background="@drawable/rect1"
					android:drawableEnd="@drawable/ic_phone_white_24dp"
					android:drawablePadding="16dp"
					android:hint="@string/registration_phone_number"
					android:inputType="phone"
					android:singleLine="true"
					android:padding="13dp" />

			</LinearLayout>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_marginTop="20dp"
			android:id="@+id/current_password_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/hintText"
			app:passwordToggleEnabled="true"
			app:passwordToggleTint="@android:color/white"
			android:textColorHint="@color/white"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/current_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:background="@drawable/rect1"
				android:drawablePadding="16dp"
				android:hint="@string/change_password_pass_current"
				android:inputType="textPassword"
				android:padding="13dp" />
		</android.support.design.widget.TextInputLayout>
		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/hintText"
			app:passwordToggleEnabled="true"
			app:passwordToggleTint="@android:color/white"
			android:textColorHint="@color/white"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:background="@drawable/rect1"
				android:drawablePadding="16dp"
				android:hint="@string/change_password_pass"
				android:inputType="textPassword"
				android:padding="13dp" />
		</android.support.design.widget.TextInputLayout>
		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_check_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:hintTextAppearance="@style/hintText"
			app:passwordToggleEnabled="true"
			app:passwordToggleTint="@android:color/white"
			android:textColorHint="@color/white"
			app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/password_check"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:background="@drawable/rect1"
				android:drawablePadding="16dp"
				android:hint="@string/change_password_repeat_pass"
				android:inputType="textPassword"
				android:padding="13dp" />
		</android.support.design.widget.TextInputLayout>

	</LinearLayout>
	</LinearLayout>
		<ProgressBar
			android:id="@+id/pb_loading_indicator"
			android:layout_marginTop="50dp"
			android:layout_width="42dp"
			android:layout_height="42dp"
			android:layout_gravity="center_vertical|center_horizontal"
			android:visibility="invisible" />
	</FrameLayout>
</ScrollView >